tests/fail/unwrap.glu
// ERROR Option was None
let { Option, unwrap }  = import! std.option

unwrap None
